# wttrinbot

./: .env.example  Dockerfile  README.md  Spacefile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  weather_whats_now.py
wttrinbot/: __main__.py  cli.py
wttrinbot/handlers/: inline.py
wttrinbot/models/: base.py  context.py  saves.py
wttrinbot/translations/: ru.py
wttrinbot/utils/: check_env.py  coord_resolver.py  direction.py  encode_sha1.py
