[tool.poetry]
name = "wttrinbot"
version = "0.1.0"
description = ""
authors = ["Aqendo <aqendomail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
geopy = "^2.3.0"
aiohttp = "^3.8.5"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
